test_programs/valid/typedef.c
typedef int Type;

int main()
{
}
