test_programs/invalid/typedef_with_initializer.c
typedef int Type = 1;

int main()
{
}
